--- a/admin/css/slot-management.css
+++ b/admin/css/slot-management.css
@@ -341,8 +341,7 @@
   background: var(--neutral-white);
   padding: 30px;
   border-radius: 12px;
-  width: 90%;
-  height: 90%;
+  /* width: 90%; */
   max-width: 500px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
 }
@@ -395,11 +394,11 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 15px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .form-row .form-group {
-  margin-bottom: 0; /* remove inside spacing */
+  margin-bottom: 0; 
 }
 
 .form-label {
@@ -973,7 +972,7 @@
 
 .modal-actions {
     padding: 20px 0;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
 /* Ensure modal content maintains proper padding when scrolling */
@@ -1086,6 +1085,10 @@
     font-weight: bold;
 }
 
+#configSlotBuilding {
+  width: 100%;
+}
+
 /* No Slots Message Styling */
 .no-slots {
     text-align: center;
@@ -1095,6 +1098,14 @@
     background: #f8f9fa;
     border-radius: 8px;
     margin: 20px 0;
+}
+
+#configSlotGroup {
+  height: 35px;
+}
+
+#slotGroup {
+  height: 20px;
 }
 
 /* Slot hover effects for better UX */
